Completar histórico e publicar artigo sobre ordenação

--- a/_posts/2019-11-07-edicao2017_2.md
+++ b/_posts/2019-11-07-edicao2017_2.md
@@ -6,7 +6,7 @@ categories: historico
 ---
 
 O ano de 2017 marca o início do projeto intitulado **Desafio de Programação**, inicialmente realizado no IFMS câmpus Aquidauana, com auxílio de diversos professores, entre eles
-o profº Ygo, profº Rafael, profº Caio, profª Inara e eu (profº Lucas).
+o profº Ygo, profº Rafael, profº Caio, profª Inara, profº Pedro e eu (profº Lucas).
 
 Além dos encontros semanais, participamos das seguintes competições (clique nos links para ver as fotos):
 
