Adiçao de foto na ediçao de 2018

--- a/_posts/2019-11-07-edicao2018.md
+++ b/_posts/2019-11-07-edicao2018.md
@@ -15,4 +15,7 @@ Competições de 2018:
 - Olimpíada Brasileira de Informática - 1ª fase
 - [Maratona de Programação UDESC-IFMS][1]
 
+![Estudantes competindo][maratona]
+
 [1]: https://drive.google.com/drive/folders/1oYaB103Mza9BOSHIGWyhmUvJJOuoX0n_?usp=sharing
+[maratona]: {{site.baseurl}}/assets/img/maratona_2018.jpg "Estudantes competindo"
