--- a/_posts/2019-11-07-edicao2017_2.md
+++ b/_posts/2019-11-07-edicao2017_2.md
@@ -15,7 +15,7 @@ Além dos encontros semanais, participamos das seguintes competições (clique n
 - Meia Maratona do IFMS-AQ - [1ª edição][2] e [2ª edição][5]
 - [CRIA (1ª fase)][6]
 
-![alt text][logo]
+![Equipe e estudantes ao final da competição][logo]
 
 [1]: https://drive.google.com/drive/folders/0B_aBRkPVBdAYSUxQYnNKZzd5eGs?usp=sharing
 [2]: https://drive.google.com/drive/folders/0B_aBRkPVBdAYSTEtMnU0TTV1c0E?usp=sharing
