Corrigir o post sobre mapas

--- a/_posts/2019-11-20-mapa.md
+++ b/_posts/2019-11-20-mapa.md
@@ -5,11 +5,11 @@ date:   2019-11-20 09:25:00 -0400
 categories: estudo
 ---
 
-Uma *Mapa* é uma estrutura de dados que associa chaves a valores. Uma vez inserido em um Mapa, um valor pode ser eficientemente recuperado a partir de sua chave, da mesma forma que um valor pode ser recuperado de um vetor a partir de seu índice.
+Um *Mapa* é uma estrutura de dados que associa chaves a valores. Uma vez inserido em um *Mapa*, um valor pode ser eficientemente recuperado a partir de sua chave, da mesma forma que um valor pode ser recuperado de um vetor a partir de seu índice.
 
-Uma característica importante dos mapas é uma chave corresponde a exatamente um valor; não existem chaves duplicadas em um mesmo Mapa. Por isto, quanto o usuário tentar inserir um valor utilizando uma chave que já existente, o Mapa esquecerá a associação anterior e fará a chave apontar para o novo valor inserido.
+Uma característica importante dos mapas é que uma chave corresponde a exatamente um valor; não existem chaves duplicadas em um mesmo *Mapa*. Por isto, quanto o usuário tentar inserir um valor utilizando uma chave que já existente, o *Mapa* esquecerá a associação anterior e fará a chave apontar para o novo valor inserido.
 
-O exemplo abaixo mostra como utilizar um Mapa em Java para associar o nome à idade de um grupo de pessoas. 
+O exemplo abaixo mostra como utilizar um *Mapa* em Java para associar o nome à idade, para um grupo de pessoas. 
 
 {% highlight java %}
 import java.util.HashMap;
@@ -36,11 +36,13 @@ Para compilar e rodar na linha de comando:
     $ javac Mapa.java
     $ java Mapa
     
-Para criar um Mapa em Java, deve-se especificar o tipo da chave e do valor na hora da declaração. No exemplo acima, o chave era do tipo *String*, e o valor do tipo *Integer*. Somente objetos são permitidos como chaves e valores, por isto utilizamos *Integer* em vez do primitivo *int*.
+Para criar um *Mapa* em Java, deve-se especificar o tipo da chave e do valor na hora da declaração. No exemplo acima, o chave era do tipo *String*, e o valor do tipo *Integer*. Somente objetos são permitidos como chaves e valores, por isto utilizamos *Integer* em vez do primitivo *int*.
 
 Enquanto que o método *put(chave, valor)* pode ser utilizado para inserir e atualizar valores, o método *remove(chave)* pode ser usado para a remoção de valores e o método *size()* para contar a quantidade de associações existentes na estrutura.
 
-Um Mapa pode ser implementado utilizando diferentes estratégias. Em Java, existem duas principais implementações: o *HashMap*, que se baseia em uma tabela de espalhamento, e o *TreeMap*, que se baseia em uma árvore binária de busca.
+Um *Mapa* pode ser implementado utilizando diferentes estratégias. Em Java, existem duas principais implementações: o *HashMap*, que se baseia em uma tabela de espalhamento, e o *TreeMap*, que se baseia em uma árvore binária de busca.
+
+A estrutura *Mapa* também pode ser chamada de *Dicionário* ou *Vetor Associativo*. 
 
 ## Probemas relacionados
 
