Redução da linha

--- a/_posts/2019-11-21-pilha.md
+++ b/_posts/2019-11-21-pilha.md
@@ -22,7 +22,8 @@ public class Pilha {
         Stack<String> pilha = new Stack<>();
         Scanner leitor = new Scanner(System.in);
 
-        System.out.println("Digite a entrada a ser invertida (entre com FIM para fim de entrada)");
+        System.out.println("Digite a entrada a ser invertida.");
+        System.out.println("Para terminar, digite FIM.");
         while(true) {
             String valor = leitor.next();
             if(valor.equals("FIM"))
