--- a/_posts/2019-11-20-mapa.md
+++ b/_posts/2019-11-20-mapa.md
@@ -44,7 +44,7 @@ Um *Mapa* pode ser implementado utilizando diferentes estratégias. Em Java, exi
 
 A estrutura *Mapa* também pode ser chamada de *Dicionário* ou *Vetor Associativo*. 
 
-## Probemas relacionados
+## Problemas relacionados
 
 - [Ida à Feira][1]
 - [Tradutor do Papai Noel][2]
