--- a/_posts/2019-11-21-pilha.md
+++ b/_posts/2019-11-21-pilha.md
@@ -52,7 +52,7 @@ No exemplo acima, criou-se uma *Pilha* para armazenar *Strings*, lidas da entrad
 
 Uma *Pilha* pode ser implementada por meio de um vetor ou pelo uso de listas simplesmente encadeadas.
 
-## Probemas relacionados
+## Problemas relacionados
 
 - [Diamantes e Areia][2]
 - [Balanço de Parênteses I][3]
