--- a/_posts/2022-06-14-edicao2022.md
+++ b/_posts/2022-06-14-edicao2022.md
@@ -9,8 +9,16 @@ Com o retorno das atividades presenciais, voltamos também com o treinamento par
 
 ## Primeira fase
 
-Um total de 7 estudantes participaram da primeira fase, distribuídos no nível 1, 2 e senior. 
+Um total de 10 estudantes participaram da primeira fase, distribuídos no nível 1, 2 e senior. 
 
-![Participantes da primeira fase][primeira_fase]
+Uma parte (7 estudantes) realizou a prova na manhã do dia 14/06, na UFMS:
 
-[primeira_fase]: {{site.baseurl}}/assets/img/obi_2022.jpeg "Participantes da primeira fase da modalidade programação"
+![Participantes da primeira fase][primeira_fase1]
+
+A outra parte (3 estudantes) participou no laboratório do campus no dia 15/06:
+
+![Participantes da primeira fase][primeira_fase2]
+
+[primeira_fase1]: {{site.baseurl}}/assets/img/obi_2022_a.jpeg "Participantes da primeira fase da modalidade programação - primeira batelada"
+
+[primeira_fase2]: {{site.baseurl}}/assets/img/obi_2022_b.jpeg "Participantes da primeira fase da modalidade programação - segunda batelada"
