--- a/_posts/2022-06-14-edicao2022.md
+++ b/_posts/2022-06-14-edicao2022.md
@@ -19,6 +19,26 @@ A outra parte (3 estudantes) participou no laboratório do campus no dia 15/06:
 
 ![Participantes da primeira fase][primeira_fase2]
 
+## Segunda fase
+
+Dois estudantes se classificaram para a segunda fase, realizada no dia 23/08.
+
+![Participantes da segunda fase][segunda_fase1]
+
+## Terceira fase
+
+Os dois estudantes conseguiram se classificar para a terceira fase, cuja prova foi aplicada dia 01/10. Parabéns pelo esforço e dedicação!
+
+![Participantes da terceira fase][terceira_fase1]
+![Participantes da terceira fase][terceira_fase2]
+
+
 [primeira_fase1]: {{site.baseurl}}/assets/img/obi_2022_a.jpeg "Participantes da primeira fase da modalidade programação - primeira batelada"
 
 [primeira_fase2]: {{site.baseurl}}/assets/img/obi_2022_b.jpeg "Participantes da primeira fase da modalidade programação - segunda batelada"
+
+[segunda_fase1]: {{site.baseurl}}/assets/img/obi_2022_c.jpeg "Participantes da segunda fase da modalidade programação"
+
+[terceira_fase1]: {{site.baseurl}}/assets/img/obi_2022_d.jpeg "Participante da terceira fase da modalidade programação"
+
+[terceira_fase2]: {{site.baseurl}}/assets/img/obi_2022_e.jpeg "Participante da terceira fase da modalidade programação"
